--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
+    "homepage": "https://jdoyle5254.github.io/jendoylereactportfolio/",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
@@ -17,6 +19,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b production -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
